quick-start-app/base/quick-start.yaml
apiVersion: apps/v1
kind: Deployment
***REMOVED***
  name: quick-start
***REMOVED***
    app.openshift.io/runtime: quarkus
    app: quick-start
    app-with-metrics: quick-start

spec:
  replicas: 1
  selector:
    matchLabels:
      app: quick-start
  template:
    ***REMOVED***
    ***REMOVED***
        app: quick-start
        version: v1
    spec:
      containers:
        - name: quarkus-getting-started
          image: quay.io/mcombi/quarkus-getting-started:latest
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
          readinessProbe:
            httpGet:
              path: /q/health
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /q/health/
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
